--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 actix-web = "3"
 serde = "1.0.130"
 actix-cors = "0.5.4"
+diesel = { version = "1.4.4", features = ["postgres"] }
+dotenv = "0.15.0"
