--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,14 @@ edition = "2018"
 actix-web = "3"
 serde = "1.0.130"
 actix-cors = "0.5.4"
-diesel = { version = "1.4.4", features = ["postgres"] }
+diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
 dotenv = "0.15.0"
+derive_more = "0.99.2"
+futures = "0.3.1"
+r2d2 = "0.8.8"
+serde_derive = "1.0"
+serde_json = "1.0"
+actix-service = "1.0.1"
+alcoholic_jwt = "1.0.0"
+reqwest = "0.9.22"
+actix-rt = "1.0.0"
